[Fix]: margin on h2
- The margin on h2 previously moved the h2 tag content lower than what it is supposed to be.
  This made the page look weird.

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ footer > p {
 }
 .introduction-container > * {
     display: block;
+    margin: 0;
 }
 .introduction-container >h1{
     margin: 0px;
